Move RSS feed to footer

--- a/css/main.scss
+++ b/css/main.scss
@@ -52,6 +52,10 @@ $on-laptop:        800px;
         "syntax-highlighting"
 ;
 
+.page-content {
+    padding: 30px 0 0 0;
+}
+
 footer.site-footer {
     padding: 10px;
 }
