--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,11 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>
-              <a href="{{ site.url }}">Main site</a>
-          </li>
-        </ul>
+        <a href="{{ site.url }}">Main site</a>
+        |
+        <span class="rss-subscribe">
+            <a href="{{ "/feed.xml" | prepend: site.baseurl }}">Subscribe via RSS</a>
+        </span>
       </div>
 
     </div>
