Add some manual excerpts and switch to two-col list format

--- a/css/main.scss
+++ b/css/main.scss
@@ -70,3 +70,10 @@ footer.site-footer {
     border: 1px solid grey;
     padding: 4px 8px;
 }
+
+/* Two-column blog list */
+.post-list > li {
+    float: left;
+    width: 50%;
+    margin-bottom: 12px;
+}
