--- a/css/main.scss
+++ b/css/main.scss
@@ -82,3 +82,8 @@ footer.site-footer {
 .post-list > li:nth-child(odd) {
     clear: left;
 }
+
+header.site-header div.wrapper nav.site-nav a.page-link {
+    margin-right: 0;
+    padding: 0 10px;
+}
