--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,8 @@
       </a>
 
       <div class="trigger">
-        <a class="page-link" href="blog.html">Blog</a> |
+        <a class="page-link" href="/docs.html">Docs</a> |
+        <a class="page-link" href="/blog.html">Blog</a> |
         {% for my_page in site.pages %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
