Add new blog update

--- a/css/main.scss
+++ b/css/main.scss
@@ -87,3 +87,8 @@ header.site-header div.wrapper nav.site-nav a.page-link {
     margin-right: 0;
     padding: 0 10px;
 }
+
+.post-content img {
+    width: 80%;
+    border: 1px solid silver;
+}
